--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mantine/notifications": "^6.0.11",
     "@phosphor-icons/react": "^2.0.9",
     "@tabler/icons-react": "^2.20.0",
+    "@tanstack/react-query": "^5.4.3",
     "apexcharts": "^3.40.0",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
@@ -49,6 +50,7 @@
     "@storybook/react": "^7.0.12",
     "@storybook/react-vite": "^7.0.12",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@tanstack/eslint-plugin-query": "^5.0.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -73,5 +75,6 @@
   },
   "msw": {
     "workerDirectory": "public"
-  }
+  },
+  "packageManager": "yarn@4.0.1"
 }
